<resources>
    <string name="app_name">Счётчики</string>

    <!--  Текст на главном экране рядом с полями ввода значений счётчиков.  -->
    <string name="old_electricity">Старая элект.</string>
    <string name="old_hot">Старая горячая</string>
    <string name="old_cold">Старая холодная</string>
    <string name="new_electricity">Новая элект.</string>
    <string name="new_hot">Новая горячая</string>
    <string name="new_cold">Новая холодная</string>
    <!--  Текст-подсказка у пустых полей ввода значений счётчиков.  -->
    <string name="editText_hint">(Введите)</string>



    <!--  Появляется после нажатия кнопки "Расчитать" внизу экрана.
            после текста идёт число (сумма в рублях).  -->
    <string name="hot_water">Горячая вода:</string>
    <string name="cold_water">Холодная вода:</string>
    <string name="water">Вода:</string>
    <string name="electricity">Электричество:</string>
    <string name="sum">Итого:</string>
    <!--  Валюта, российские рубли, это конец предложения.  -->
    <string name="rub">руб.</string>

    <!--  Пункт меню на основном экране, отвечающий за перемещение
        чисел с правых EditText в левые (подготовка приложения к заполнению на следующий месяц).  -->
    <string name="refresh">Обновить</string>

    <!--  Текст на кнопке на главном экране, которая отвечает за расчёт счётчиков
            и вывод текста.  -->
    <string name="calculate">Расчитать</string>

    <!--  Сообщение об ошибке в нижней части экрана.  -->
    <string name="error">Ошибка! Проверьте введённые данные.</string>
</resources>
