<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/calculate"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOldElectricity" />

    <EditText
        android:id="@+id/editTextOldHotWater"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editTextNewHotWater"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextNewColdWater"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/editText_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewHotWater"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewOldElectricity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_electricity"
        app:layout_constraintBottom_toTopOf="@+id/editTextOldElectricity"
        app:layout_constraintStart_toStartOf="@+id/editTextOldElectricity" />

    <EditText
        android:id="@+id/editTextOldColdWater"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editTextNewColdWater"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOldHotWater"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewOldHotWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_hot"
        app:layout_constraintBottom_toTopOf="@+id/editTextOldHotWater"
        app:layout_constraintStart_toStartOf="@+id/editTextOldHotWater" />

    <EditText
        android:id="@+id/editTextOldElectricity"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editTextNewElectricity"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOldColdWater"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewOldColdWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/old_cold"
        app:layout_constraintBottom_toTopOf="@+id/editTextOldColdWater"
        app:layout_constraintStart_toStartOf="@+id/editTextOldColdWater" />

    <TextView
        android:id="@+id/textViewNewHotWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_hot"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewHotWater"
        app:layout_constraintStart_toStartOf="@+id/editTextNewHotWater" />

    <EditText
        android:id="@+id/editTextNewElectricity"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/editText_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewColdWater"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewNewElectricity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_electricity"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewElectricity"
        app:layout_constraintStart_toStartOf="@+id/editTextNewElectricity" />

    <EditText
        android:id="@+id/editTextNewHotWater"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/editText_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewOldHotWater3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/new_hot"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewColdWater"
        app:layout_constraintStart_toStartOf="@+id/editTextNewColdWater" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.126"
        tools:text="(TextView)" />

</androidx.constraintlayout.widget.ConstraintLayout>